[metadata]
author = Dwight Hubbard
author_email = dhubbard@yahoo-inc.com
description-file = README.md
name = hostlists
url = https://github.com/yahoo/hostlists
version = 0.8.0

[options]
install_requires =
    dnspython;python_version<"3.0"
    dnspython3;python_version>"3.0"
    requests

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[options.entry_points]
console_scripts =
    hostlists=hostlists.cli:main
hostlists_plugins =
    range=hostlists_plugins_default.range:HostlistsPluginRange