[metadata]
author = Dwight Hubbard
author_email = dhubbard@yahoo-inc.com
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: System :: Systems Administration
    Topic :: Utilities
description-file = README.rst
license = Apache Software License
name = hostlists
url = https://github.com/yahoo/hostlists
version = 0.8.3

[options]
install_requires =
    dnspython;python_version<"3.0"
    dnspython3;python_version>="3.0"
    requests
packages =
    hostlists
    hostlists.plugins
    hostlists_plugins_default

[options.entry_points]
console_scripts =
    hostlists=hostlists.cli:main
hostlists_plugins =
    range=hostlists_plugins_default.range:HostlistsPluginRange

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[pycodestyle]
count = False
ignore = E1,E2,E3,E4,E5,W293,E226,E302,E41
max-line-length = 160
statistics = True

[upload_sphinx]
upload-dir = docs/build/html
